@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-10T16:19:43Z",
+  "timestamp" : "2022-07-11T01:25:28Z",
   "count_outdated" : 381,
   "uniques_outdated" : 220,
-  "count" : 410,
-  "uniques" : 236,
+  "count" : 413,
+  "uniques" : 238,
   "clones" : [
     {
       "timestamp": "2022-06-27T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-10T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
