@@ -1,6 +1,6 @@
 {
-  "count": 29,
-  "uniques": 4,
+  "count": 32,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-06-27T00:00:00Z",
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-10T00:00:00Z",
+      "count": 3,
       "uniques": 2
     }
   ]
